# lmra

./: .gitignore  CHANGELOG.md  README.md  justfile  pre-commit-config.yaml  prek.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: default-issue.yaml
.github/workflows/: release.yml  verify.yml
assets/: logo.xcf
demo/: app.py  base.py  chat.py  fixtures.py  test.py  viewer.py
docs/diagrams/: gui-vs-nli.excalidraw
src/llmalchemy/: __init__.py  agent.py  code.py  context.py  database.py  prompt.jinja  tools.py
src/lmra/: __init__.py  agent.py  code.py  context.py  database.py  prompt.jinja  tools.py
tests/: conftest.py
tests/integration/: test_agent_flow.py
tests/unit/: test_agent.py  test_code.py  test_context.py  test_database.py  test_tools.py
