[project]
name = "llmalchemy"
version = "1.4.1"
description = "A full-access agent pattern."
requires-python = ">=3.13"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Ignacio Llorca", email = "nllorca@proton.me" }]
dependencies = [
    "lmdk",
    "sqlalchemy"
]

[dependency-groups]
dev = [
    "complexipy",
    "pytest-cov",
    "ruff",
    "streamlit>=1.56.0",
    "ty",
]

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
fix = true
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["D105", "D107"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = ""
commit_message = "chore: release {version}"
commit_parser = "conventional"
tag_format = "v{version}"
changelog_file = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
